--- a/kollel/package.json
+++ b/kollel/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.0.0-rc.1",
-    "@material-ui/core": "^1.5.0",
+    "@babel/runtime": "^7.0.0",
+    "@material-ui/core": "^3.0.0",
     "babel-core": "^6.26.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -12,7 +12,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "webpack": "^3.11.0"
+    "webpack": "^3.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
